am making ui fixes

--- a/src/assets/fonts/index.css
+++ b/src/assets/fonts/index.css
@@ -34,7 +34,7 @@
   font-family: 'Switzer';
   src: url('./Switzer-Regular.ttf') format('truetype');
   font-weight: 500;
-  font-style: normal;
+  font-style: medium;
 }
 
 /* SEMI-BOLD */
